--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site url
 url: https://m-tanveer.github.io
-baseurl: /agency-jekyll-theme
+baseurl: agency-jekyll-theme
 
 # Site settings
 title: Awesome Title
