--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site url
 url: https://m-tanveer.github.io
-baseurl: /vitruvio.in/
+baseurl: /vitruvio.in
 
 # Site settings
 title: Awesome Title
