--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site url
-url: https://m-tanveer.github.io
+url: https://m-tanveer.github.io/vitruvio.in
 baseurl: /vitruvio.in
 
 # Site settings
