--- a/_config.yml
+++ b/_config.yml
@@ -3,63 +3,57 @@ url: http://www.vitruvio.in
 baseurl: ''
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
+title: Vitruvio Groups
+email: vitruviogroups@gmail.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Asif Munavar
   pic: 1
-  position: Lead Designer
+  position: Co-Founder
   social:
-    - title: twitter
+    - title: 
       url: #
-    - title: facebook
+    - title: 
       url: #
-    - title: stack-overflow
+    - title: 
       url: #
 
-- name: Larry Parker
+- name: Lovely Jain
   pic: 2
-  position: Lead Marketer
+  position: Designer
   social:
-    - title: twitter
+    - title: 
       url: #
-    - title: facebook
+    - title: 
       url: #
-    - title: linkedin
+    - title: 
       url: #
 
-- name: Diana Petersen
+- name: Rishabh Agarwal
   pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+  position: Project Manager
+ 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: https://www.facebook.com/vitruviodevelopers
+  - title: instagram
+    url: https://www.instagram.com/vitruviogroups/
+  - title:  
+    url: 
+  - title: 
+    url: 
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Bengaluru,Karnataka.
+  - line: 
 
 # Build settings
 markdown: kramdown
