--- a/_config.yml
+++ b/_config.yml
@@ -26,14 +26,14 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com
   - title: facebook
     url: https://www.facebook.com/vitruviodevelopers
   - title: instagram
     url: https://www.instagram.com/vitruviogroups/
-  - title:  
-    url: 
+  - title: youtube
+    url: https://studio.youtube.com/channel/UCnXbZeFye7fPc3fMH7zUvEQ
+  - title: twitter 
+    url: http://twitter.com
   - title: 
     url: 
 
