--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social:
   - title: instagram
     url: https://www.instagram.com/vitruviogroups/
   - title: youtube
-    url: https://studio.youtube.com/channel/UCnXbZeFye7fPc3fMH7zUvEQ
+    url:
   - title: twitter 
     url: http://twitter.com
   - title: 
